# TitanX

./: .gitignore  README.md  implementation_plan.txt
api-gateway/: pom.xml
api-gateway/src/main/java/com/titanx/gateway/controller/: OrderController.java
api-gateway/src/main/java/com/titanx/gateway/security/: JwtTokenService.java  TokenBucketRateLimiter.java
backend/: CMakeLists.txt  Dockerfile  vcpkg.json
backend/include/titanx/engine/: MatchingEngine.hpp  OrderBook.hpp
backend/include/titanx/event/: EventType.hpp  FillEvent.hpp  OrderEvent.hpp
backend/include/titanx/gateway/: HttpServer.hpp  JwtTokenService.hpp  TokenBucketRateLimiter.hpp
backend/include/titanx/model/: Order.hpp  OrderSide.hpp  OrderStatus.hpp  OrderType.hpp  Trade.hpp
backend/include/titanx/persistence/: EventStore.hpp  RedisPositionCache.hpp
backend/include/titanx/risk/: CircuitBreaker.hpp  RiskEngine.hpp  RiskResult.hpp
backend/src/: main.cpp
backend/src/engine/: MatchingEngine.cpp  OrderBook.cpp
backend/src/event/: OrderEvent.cpp
backend/src/gateway/: HttpServer.cpp  JwtTokenService.cpp  TokenBucketRateLimiter.cpp
backend/src/model/: Order.cpp  Trade.cpp
backend/src/persistence/: EventStore.cpp  RedisPositionCache.cpp
backend/src/risk/: CircuitBreaker.cpp  RiskEngine.cpp
backend/src/simulation/: OrderGenerator.cpp
backend/tests/: MatchingEngineTest.cpp  OrderBookTest.cpp  RiskEngineTest.cpp
infra/: docker-compose.yml  prometheus.yml  schema.sql
infra/grafana/dashboards/: matching-engine.json
matching-engine/: Dockerfile  pom.xml
matching-engine/src/main/java/com/titanx/engine/: MatchingEngine.java  OrderBook.java
matching-engine/src/main/java/com/titanx/event/: EventType.java  FillEvent.java  OrderEvent.java
matching-engine/src/main/java/com/titanx/model/: Order.java  OrderSide.java  OrderStatus.java  OrderType.java  Trade.java
matching-engine/src/main/java/com/titanx/persistence/: EventStore.java  RedisPositionCache.java
matching-engine/src/main/java/com/titanx/risk/: CircuitBreaker.java  RiskEngine.java  RiskResult.java
matching-engine/src/main/java/com/titanx/simulation/: OrderGenerator.java
matching-engine/src/test/java/com/titanx/engine/: OrderBookTest.java
matching-engine/src/test/java/com/titanx/risk/: RiskEngineTest.java
